# chickenstats-blog

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CNAME  README.md  _quarto.yml  about.html  about.html.md  about.md  index.css  index.html  index.html.md  index.md  index.qmd  listings.json  projects.html  pyproject.toml  readme.html  search.json  settings.ini  sitemap.xml
.github/workflows/: dependency-review.yml  deploy.yaml  lint.yml
_proc/: index.ipynb  nbdev.yml
_proc/_docs/: index.html  robots.txt  sitemap.xml
blog/: index.html  index.md  index.qmd  index.xml
blog/posts/nashville_predators/checking_in_2025/: index.html  index.md
blog/posts/nashville_predators/saros/: index.md
blog/posts/tennessee_titans/titans_qbs/: index.html  index.md
blog/posts/tutorials/four_nations/: index.html  index.md
blog/posts/tutorials/gsax/: index.html
blog/posts/tutorials/lollipop/: index.html  index.md
blog/posts/tutorials/monte_carlo/: index.html  index.md
blog/posts/tutorials/network/: index.html  index.md
blog/posts/tutorials/rink_maps/: index.html
chickenstats_blog/: _modidx.py
docs/: index.html  listings.json  search.json  sitemap.xml
docs/about/: index.html
docs/blog/: index.html  index.xml
docs/projects/: chickenandstats.html  chickenstats.html  chickenstats_api.html  chickenstats_xg.html  index.html  index.xml
docs/site_libs/bootstrap/: bootstrap-99dafe759806ae647455a4c0e7327b83.min.css  bootstrap-e098d666ba291786cf59f704a4384dff.min.css
nbs/: _quarto.yml  about.ipynb  about.qmd  dark_theme.scss  index.css  index.ipynb  index.qmd.py  light_theme.scss  nbdev.yml  projects.ipynb  readme.ipynb  sidebar.yml  theme.scss
nbs/blog/: index.qmd
nbs/blog/posts/advanced_stats/rapm/: index.ipynb  process_data.py  regressions.py
nbs/blog/posts/nashville_predators/checking_in_2025/: index.ipynb
nbs/blog/posts/nashville_predators/saros/: index.ipynb
nbs/blog/posts/politics/behn_retrospective/: index.ipynb
nbs/blog/posts/tennessee_titans/titans_qbs/: index.ipynb
nbs/blog/posts/tutorials/four_nations/: index.ipynb  usa_5v5_desktop.html
nbs/blog/posts/tutorials/network/: index.ipynb
nbs/projects/: chickenandstats.ipynb  chickenstats-api.ipynb  chickenstats-xg.ipynb  chickenstats.ipynb
nbs/stylesheets/: chickenstats.css  darkly.scss  flatly.scss  material-dark.theme  material-light.theme  md-scheme-sync.html
projects/: chickenandstats.html  chickenstats-api.html  chickenstats-xg.html  chickenstats.html
site_libs/bootstrap/: bootstrap-0d1f29b95f9c40a47d05b86d4d507c36.min.css  bootstrap-607ac1b0cfe7debdd942fa6a2d777536.min.css  bootstrap-769e7323b9f7c7d06710148a90bb255c.min.css  bootstrap-dark-5a48fa562d977de90f0c87c143f3e44d.min.css  bootstrap-dark-90d641dea7af9210e1bb0e057a1a81ed.min.css  bootstrap-dark-a8ab3480678140023aa7c6354df07bbd.min.css  bootstrap-dark-ad1d3f0a6a70227af23e0834d7f25ee8.min.css  bootstrap-f0f050e0ae47de8a97b1ffd275662cbe.min.css  bootstrap-f418aecdb5c373865dda7223f53e2b19.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-a9e1d4f4f4669fdefbeedc071f5b9292.css  quarto-syntax-highlighting-dark-da784da77515439372e5beeaffa89c40.css
(+56 files in other folders)
