[project]
name="chickenstats-blog"
authors = [{name = "chickenandstats", email = "chicken@chickenandstats.com"}]
version = "0.1.0"
description = "Blog for chickenstats"
readme = "README.md"
requires-python=">=3.12"
dependencies = [
    "bokeh>=3.8.0",
    "chickenstats>=1.7.9.23",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab-quarto>=0.3.5",
    "monsterui>=1.0.32",
    "nbdev>=2.4.6",
    "plotly>=6.3.1",
    "pre-commit>=4.3.0",
    "python-fasthtml>=0.12.33",
    "quarto>=0.1.0",
    "seaborn>=0.13.2",
]

[tool.ruff]
include = [
    "pyproject.toml",
    "nbs/**/*.py",
    "nbs/**/*.ipynb",
    ]
extend-include = ["*.ipynb"]
exclude = [
    "*__init__.py",
    ]
target-version = "py313"
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "D", "UP", "B"]
fixable = ["ALL"]
ignore = ["F401", "D100", "B017", "B007", "E501"]

[tool.ruff.lint.per-file-ignores]
"nbs/index.qmd.py" = ["D205"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

