[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chickenstats-blog"
dynamic = ["version"]
description = "Blog for chickenstats"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "chickenandstats", email = "chicken@chickenandstats.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = []

[project.urls]
Repository = "https://github.com/chickenandstats/chickenstats-blog"
Documentation = "https://blog.chickenstats.com/"

[project.entry-points.nbdev]
chickenstats_blog = "chickenstats_blog._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "chickenstats_blog.__version__"}

[tool.setuptools.packages.find]
include = ["chickenstats_blog"]

[tool.nbdev]
readme_nb = 'readme.ipynb'
jupyter_hooks = true
custom_sidebar = true
